Fix crop button visibility - use display: flex instead of inline-block
- Changed display property from 'inline-block' to 'flex' for crop button
- Flex display is consistent with flex container (.media-action-holder)
- Added CSS selector for [data-action="crop"] button
- Crop button now appears correctly when image is added to media field
- Simplified debug logging to verify display property is set correctly

--- a/resources/css/components/_media-field.scss
+++ b/resources/css/components/_media-field.scss
@@ -284,6 +284,11 @@
         color: #4a5568;
     }
 
+    &[data-action="crop"] {
+        // Crop button - shown for images only, hidden by default in template
+        // JS will set display property when item is an image
+    }
+
     &[data-action="delete"] {
         &:hover {
             background-color: #fed7d7;
